# target-snowflake

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.toml  .ruff.toml  README.md  hatch.toml  meltano.yml  pyproject.toml  target_snowflake_logging.yaml  tox.ini  tox.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release_workflow.yml  test.yml
target_snowflake/: __init__.py  connector.py  default_logging.yml  initializer.py  sinks.py  snowflake_types.py  target.py
target_snowflake/tests/: __init__.py  test_core.py
tests/: __init__.py  batch.py  conftest.py  core.py  test_connector.py  test_core.py  test_impl.py  test_oauth_unit.py  test_target_snowflake.py
tests/target_test_streams/: batch_array_data.jsonl  batch_array_data.singer  batch_camelcase.jsonl  batch_camelcase.singer  batch_duplicate_records.jsonl  batch_duplicate_records.singer  batch_encoded_string_data.singer  batch_encoded_string_data__test_strings.jsonl  batch_encoded_string_data__test_strings_in_arrays.jsonl  batch_encoded_string_data__test_strings_in_objects.jsonl  batch_multiple_state_messages.singer  batch_multiple_state_messages__a.jsonl  batch_multiple_state_messages__b.jsonl  batch_no_primary_keys.jsonl  batch_no_primary_keys.singer  batch_no_primary_keys_append.jsonl  batch_no_primary_keys_append.singer  batch_optional_attributes.jsonl  batch_optional_attributes.singer  batch_record_before_schema.jsonl  batch_record_before_schema.singer  batch_record_missing_key_property.jsonl  batch_record_missing_key_property.singer  batch_record_missing_required_property.jsonl  batch_record_missing_required_property.singer  batch_schema_no_properties.singer  batch_schema_no_properties__with_properties.jsonl  batch_schema_no_properties__without_properties.jsonl  batch_schema_updates.singer  batch_schema_updates__1.jsonl  batch_schema_updates__2.jsonl  batch_schema_updates__3.jsonl  batch_schema_updates__4.jsonl  batch_special_chars_in_attributes.jsonl  batch_special_chars_in_attributes.singer  colons_in_col_name.singer  column_order_mismatch.singer  existing_reserved_name_table_alter.singer  existing_table.singer  existing_table_alter.singer  (+14 more)
