[build-system]
requires = [
    "hatchling==1.28",
    "hatch-vcs==0.5",
]
build-backend = "hatchling.build"

[project]
name = "meltanolabs-target-snowflake"
dynamic = ["version"]
description = "Singer target for Snowflake, built with the Meltano SDK for Singer Targets."
authors = [{ name = "Ken Payne" }]
maintainers = [ { name = "Meltano Team and Community", email = "hello@meltano.com" } ]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "ELT",
    "Snowflake",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "certifi==2025.11.12",
    "cryptography>=40",
    "singer-sdk[sql]~=0.53.3",
    "snowflake-connector-python[secure-local-storage]>=3.15,<5.0",
    "snowflake-sqlalchemy==1.8.2",
    "sqlalchemy~=2.0.31",
]

[project.scripts]
target-snowflake = "target_snowflake.target:TargetSnowflake.cli"

[dependency-groups]
dev = [
    "coverage>=7.2.7",
    "pytest>=8",
    "pytest-xdist>=3.3.1",
    "singer-sdk[testing]",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["target_snowflake"]

[tool.hatch.build.targets.wheel]
include = ["target_snowflake"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "ANN201",
    "COM812",
    "TD",
    "D",
    "FIX",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_snowflake"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S608", "PLR2004", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = '--durations=10'
