[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5",
]
build-backend = "hatchling.build"

[project]
name = "meltanolabs-target-snowflake"
dynamic = ["version"]
description = "Singer target for Snowflake, built with the Meltano SDK for Singer Targets."
authors = [{ name = "Ken Payne" }]
maintainers = [ { name = "Meltano Team and Community", email = "hello@meltano.com" } ]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "ELT",
    "Snowflake",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "certifi==2026.2.25",
    "cryptography>=40",
    "singer-sdk[sql]~=0.53.3",
    "snowflake-connector-python[secure-local-storage]~=4.0",
    "snowflake-sqlalchemy==1.9.0",
    "sqlalchemy~=2.0.31",
]

[project.scripts]
target-snowflake = "target_snowflake.target:TargetSnowflake.cli"

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
]
testing = [
    "coverage>=7.2.7",
    "pytest>=9",
    "pytest-xdist>=3.3.1",
    "singer-sdk[testing]",
]
typing = [
    { include-group = "testing" },
    "mypy>=1.19.1",
    "ty>=0.0.25",
]

[tool.hatch.version]
fallback-version = "0.0.0"
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["target_snowflake"]

[tool.hatch.build.targets.wheel]
include = ["target_snowflake"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "ANN201",
    "COM812",
    "TD",
    "D",
    "FIX",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S608", "PLR2004", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
addopts = [
    "--durations=10",
    "-ra",
]
filterwarnings = [
    "error",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = ["tests"]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
follow_untyped_imports = true
strict = false
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
