[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5",
]
build-backend = "hatchling.build"

[project]
name = "meltanolabs-target-snowflake"
dynamic = ["version"]
description = "Singer target for Snowflake, built with the Meltano SDK for Singer Targets."
authors = [{ name = "Ken Payne" }]
maintainers = [ { name = "Meltano Team and Community", email = "hello@meltano.com" } ]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "ELT",
    "Snowflake",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "certifi==2026.4.22",
    "cryptography>=40",
    "singer-sdk[sql]~=0.53.3",
    "snowflake-connector-python[secure-local-storage]~=4.0",
    "snowflake-sqlalchemy==1.9.0",
    "sqlalchemy~=2.0.31",
]

[project.scripts]
target-snowflake = "target_snowflake.target:TargetSnowflake.cli"
